# aise26-wod2-inclassmaterial-StrayDogSyn

./: .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  FINAL_RESOLUTION.md  IMPLEMENTATION_SUMMARY.md  LINTING_STATUS.md  Makefile  NEW_README.md  README.md  SECURITY_UPGRADE.md  app.py  code_review.md  incident_response.md  merge_resolution.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_app.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
breakout-exercises/: code_review_exercise.md  crisis_management_exercise.md  merge_conflict_exercise.md
tests/: conftest.py  test_api.py  test_security.py
